--- a/package.json
+++ b/package.json
@@ -11,6 +11,19 @@
   "license": "ISC",
   "devDependencies": {
     "angular": "^1.6.7",
-    "express": "^4.16.2"
+    "angular-jwt": "^0.1.9",
+    "angular-ui-router": "^0.4.3",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "debug": "^3.1.0",
+    "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
+    "helmet": "^3.9.0",
+    "jquery": "^3.2.1",
+    "mongoose": "^4.13.6",
+    "mongoose-paginate": "^5.0.3",
+    "morgan": "^1.9.0",
+    "node-fetch": "^1.7.3",
+    "slick-carousel": "^1.8.1"
   }
 }
