--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eagleweb/moviestore.git"
+  },
   "author": "Orel Viacheslav",
   "license": "ISC",
   "devDependencies": {
@@ -19,11 +23,9 @@
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
     "helmet": "^3.9.0",
-    "jquery": "^3.2.1",
     "mongoose": "^4.13.6",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
-    "node-fetch": "^1.7.3",
-    "slick-carousel": "^1.8.1"
+    "node-fetch": "^1.7.3"
   }
 }
