--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.13.6",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
-    "node-fetch": "^1.7.3"
+    "node-fetch": "^1.7.3",
+    "path": "^0.12.7"
   }
 }
