--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular": "^1.6.7",
     "angular-jwt": "^0.1.9",
     "angular-ui-router": "^0.4.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
