--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
     "angular": "^1.6.7",
     "angular-jwt": "^0.1.9",
     "angular-ui-router": "^0.4.3",
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
     "express": "^4.16.2",
-    "express-jwt": "^5.3.0",
     "helmet": "^3.9.0",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.6",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
     "node-fetch": "^1.7.3",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
     "path": "^0.12.7"
   }
 }
