--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-fetch": "^1.7.3",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "serve-favicon": "^2.4.5"
   }
 }
