--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cors": "^2.8.4",
     "debug": "^3.1.0",
     "express": "^4.16.2",
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.4.0",
     "helmet": "^3.9.0",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.6",
